fixed z-index of readmore header buttons

--- a/css/rhubarb2.css
+++ b/css/rhubarb2.css
@@ -375,7 +375,7 @@ body {
   text-align: center;
   height: 100%;
   width: 100%;
-  z-index: 90;
+  z-index: 87;
   display: flex;
   align-items:flex-end;
   justify-content: center;
